<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ember</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="appdescription">Ember is the best way to find the perfect \nouting no matter if it is a romantic date or a \nnight out with the family</string>
    <string name="new_user">New User</string>
    <string name="returning_user_string">Returning User</string>
    <string name="invited_via_email_string">Invited Via Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_information">My Information</string>
    <string name="your_name">YOUR NAME</string>
    <string name="your_city">YOUR CITY</string>
    <string name="search_radius">SEARCH RADIUS</string>
    <string name="submit">submit</string>
    <string name="create_account">Create Account</string>
    <string name="password_instruction">Password must be 8 characters, use upper/lower \nand include a spacial character or number.</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="create">CREATE</string>
    <string name="or">- or -</string>
    <string name="continue_with_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="login_instruct">Already have an account?</string>
    <string name="log_in"> Already have an account ? <u> <b><font color='#000000'>Log-in </font></b></u>.</string>
    <string name="terms_of_use">By continuing you agree to the Ember <u> terms of use </u>and <u>privacy policy</u>.</string>
    <string name="dontaccount">Don\'t have an account ? <u> Create Account</u>
    </string>
    <string name="change_password"> <u> Change Password</u>
    </string>
    <string name="cancel"> <u> CANCEL</u>
    </string>
    <string-array name="seclect_activity_type">
        <item>Select Activity Type</item>
        <item>Food</item>
        <item>Drinks</item>
        <item>All Events</item>
        <item>All Activities</item>
        <item>Music</item>
        <item>Dance </item>
        <item>Sports </item>
        <item>Theater </item>
        <item>Fitness </item>
    </string-array>

    <string-array name="Select_Mood">
        <item>Select Mood</item>
        <item>Romantic</item>
        <item>Relaxing</item>
        <item>Party</item>
        <item>Adventurous </item>
        <item>Group</item>
        <item>Active</item>
        <item>Family</item>
    </string-array>
    <string-array name="date_interest">
        <item>Select date Interest :</item>
        <item>Active</item>
        <item>Romantic</item>
        <item>Relaxing</item>
        <item>Sexy</item>
        <item>Dinner</item>
        <item>Drinks</item>
        <item>Games</item>
        <item>Music</item>
        <item>adventure</item>
    </string-array>

    <string-array name="planning_horrizon">
        <item>Select Planning horizon :</item>
        <item>Right Now</item>
        <item>Time is Ticking</item>
        <item>Plenty of Time</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="lostpasswordtext"><b>Don’t worry, we can help you. </b>Give us the email address you use to log in to TogetherVideo and we’ll send you instructions for resetting your password</string>
    <string name="stringforgotpassword"> <u> Forgot Password</u></string>
    <string name="not_matched"><u>Not Matched</u></string>
    <string name="make_favourite"><u>Make Favourite</u></string>
    <string name="log_date"><u>Log Date</u></string>
    <string name="add_hash_tags"><u>Add Hash Tags</u></string>
    <string name="cancel_invite"><u>CANCEL INVITE</u></string>
    <string name="remove_partner"><u>REMOVE PARTNER</u></string>
    <string name="a_to_z"><u>A TO Z</u></string>
    <string name="z_to_a"><u>Z TO A</u></string>
    <string name="newest"><u>NEWEST</u></string>
    <string name="oldest"><u>OLDEST</u></string>
    <string name="new_one"><u>NEW</u></string>
    <string name="favourites"><u>FAVOURITES</u></string>
    <string name="remove_link_request"><u>REMOVE LINK REQUEST</u></string>
    <string name="re_send_email_invite"><u>RE-SEND EMAIL INVITE</u></string>
    <string-array name="select_relationship_ship">
        <item>SELECT RELATIONSHIP SHIP</item>
        <item>Single</item>
        <item>Married</item>
    </string-array>
    <string-array name="hours">
        <item>Hours</item>
    </string-array>
    <string-array name="Dating">
        <item>DATING</item>
    </string-array>

</resources>
