<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/lobster_two"
        android:text="Returning Users"
        android:textColor="@color/colorLightBrown"
        android:textSize="@dimen/_25ssp" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20ssp"
        android:layout_marginRight="@dimen/_20sdp"
        android:fontFamily="@font/exo_2"
        android:hint="@string/username"
        android:textColorHint="@color/colorText"
        android:textSize="@dimen/_15ssp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20ssp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/exo_2"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorText"
        android:textSize="@dimen/_15ssp" />

    <Button
        android:id="@+id/btnSignInViaEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/btnroundgrey"
        android:fontFamily="@font/exo_2"
        android:text="sign-in via email"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_15ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/lobster_two"
        android:text="@string/or"
        android:textColor="@color/colorLightBrown"
        android:textSize="@dimen/_15ssp" />

    <Button
        android:id="@+id/btnSignInViaFacebook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/size15_"
        android:background="@drawable/btnroundgrey"
        android:fontFamily="@font/exo_2"
        android:text="sign-in with facebook"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_15ssp" />

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/exo_2"
        android:gravity="start"
        android:text="@string/dontaccount"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_15ssp" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/exo_2"
        android:gravity="start"
        android:text="@string/stringforgotpassword"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_15ssp" />
</LinearLayout>