<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/lobster_two"
        android:text="Lost Password"
        android:textColor="@color/colorLightBrown"
        android:textSize="@dimen/_25ssp" />

    <TextView
        android:id="@+id/text_privacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25ssp"
        android:layout_marginRight="@dimen/_20sdp"
        android:fontFamily="@font/exo_2"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/_2ssp"
        android:paddingBottom="@dimen/_15ssp"
        android:text="@string/lostpasswordtext"
        android:textColor="@color/colorText"
        android:textSize="@dimen/_13ssp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:backgroundTint="@color/colorBlack"
        android:fontFamily="@font/exo_2"
        android:hint="@string/email"
        android:textColorHint="@color/colorText"
        android:textSize="@dimen/_15ssp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/btnroundgrey"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20ssp" />
</LinearLayout>