<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/left_arrow" />

        <ImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/bulb" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/exo_2_light"
            android:text="SAVED IDEAS"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_15sdp" />

        <ImageView
            android:id="@+id/img_Filterbtn"
            android:layout_width="@dimen/size30_"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/_10sdp"
            android:src="@drawable/filter" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/exo_2_light"
                android:text="@string/a_to_z"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/exo_2_light"
                android:text="@string/z_to_a"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/exo_2_light"
                android:text="@string/new_one"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/size5_"
            android:layout_marginRight="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/exo_2_light"
                android:text="@string/newest"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/exo_2_light"
                android:text="@string/favourites"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/exo_2_light"
                android:text="@string/oldest"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/exo_2_light"
                android:text="FOOD"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/exo_2_light"
                android:text="ROMANCE"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/exo_2_light"
                android:text="DRINKS"
                android:textColor="@color/colorText"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/edittext_search_border">

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:padding="@dimen/_7sdp"
                android:src="@drawable/search_blue" />

            <EditText
                android:id="@+id/et_search_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_toLeftOf="@+id/search_icon"
                android:background="@color/colorWhite"
                android:hint="SEARCH"
                android:singleLine="true"
                android:textColor="@color/colorText2"
                android:textSize="@dimen/_13ssp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/colorViewGrey" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSeeAllSavedIdeas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_10sdp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_10sdp" />
</LinearLayout>